# preconsult_chat

./: .agentignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
docs/: SPRINTS.md
reflex_app/: rxconfig.py
reflex_app/preconsult/: analytics.py  i18n.py  preconsult.py  state.py
scripts/: configure_cloudflare.sh  deploy_backend.sh  setup_wif.sh
src/preconsult/: main.py
src/preconsult/api/: endpoints.py
src/preconsult/core/: config.py  errors.py  llm.py
src/preconsult/services/: pdf_service.py  session_service.py
tests/: conftest.py  test_agent_service.py  test_api_integration.py  test_error_handlers.py  test_i18n.py  test_llm_api.py  test_pdf_service.py  test_question_parsing.py  test_rate_limit.py  test_reflex_app.py  test_security.py  test_session_service.py
