[project]
name = "preconsult"
version = "0.1.0"
description = "PreConsult - Privacy-First Medical Intake Assistant"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.136.1",
    "gunicorn==26.0.0",
    "langchain-google-vertexai==2.1.2",
    "langchain==0.3.27",
    "pydantic==2.13.4",
    "reportlab==5.0.0",
    "uvicorn[standard]==0.34.0",
    "google-cloud-aiplatform==1.117.0",
    "python-dotenv==1.1.1",
    "redis==6.4.0",
    "reflex==0.9.6.post1",
    "sentry-sdk==2.64.0",
    "cachetools==5.5.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.1.0",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asyncio: marks tests as async"]

[tool.hatch.build.targets.wheel]
packages = ["src/preconsult"]
